--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,18 +1,24 @@
 * { padding: 0; margin: 0; border: 0; box-sizing: border-box; }
 
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1em;
+}
+
 header {
   background-color: #8B0000;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
-  width: 100%;
   height: 6%;
   border-bottom: 0px;
 }
-
+header::after {
+  clear:both;
+}
 nav {
   background-color: #404040;
   height: 4%;
-  width: 100%;
   color: white;
   font-family: sans-serif, Times, serif;
   font-size: 1em;
@@ -22,37 +28,36 @@ nav {
   text-align: right;
   clear: both;
 }
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 1em;
-  clear: both;
-}
+
 article {
+  float: left;
   width: 70%;
-  background-color: white;
-  height: 80%;
+  height: 1000px; /* only for demonstration, should be removed */
+  background: white;
+  padding: 20px;
+}
+
+aside {
   float: left;
   padding: 20px;
-  height: 60%
-}
-aside {
-  float: right;
   width: 30%;
   background-color: white;
-  height: 80%;
-  text-align: left;
+  height: 1000px;
+}
+
+/* Clear floats after the columns */
+section:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 footer {
   clear: both;
-  position: fixed;
   left: 0;
   bottom: 0;
   background-color: #404040;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   width: 100%;
-  height: 10%;
 }
-
-p { width: 100%}
